--- a/.gitea/workflows/full-test.yml
+++ b/.gitea/workflows/full-test.yml
@@ -1,12 +1,13 @@
 name: Full Test Suite
 
-# Comprehensive testing on PRs - ALL TESTS
+# Comprehensive testing on PRs and pushes with .go changes
 # Goal: <15 minutes for thorough validation
+# Pure shell commands - no JavaScript actions (act_runner k8s has no Node.js)
 
 on:
   pull_request:
     branches: [dev, main]
-  workflow_dispatch:  # Allow manual trigger
+  workflow_dispatch:
   push:
     branches: [dev, main]
     paths:
@@ -21,16 +22,14 @@ jobs:
     name: Code Quality & Unit Tests
     runs-on: golang
     steps:
-      - name: Install Node.js for actions
-        run: |
-          apt-get update -qq
-          apt-get install -y -qq curl
-          curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
-          apt-get install -y -qq nodejs make
-          node --version
+      - name: Install build deps
+        run: apt-get update -qq && apt-get install -y -qq make bc
 
       - name: Checkout code
-        uses: actions/checkout@v4
+        run: |
+          git config --global credential.helper store
+          echo "https://token:${{ github.token }}@$(echo '${{ github.server_url }}' | sed 's|https\?://||')" > ~/.git-credentials
+          git clone --depth=1 --branch ${{ github.ref_name }} ${{ github.server_url }}/${{ github.repository }}.git .
 
       - name: Install dependencies
         run: |
@@ -58,25 +57,18 @@ jobs:
 
           echo "::notice::Coverage ${COVERAGE}% meets 65% threshold"
 
-      - name: Upload coverage artifact
-        uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: coverage-report
-          path: coverage.out
-          retention-days: 7
-
   sanity-tests:
     name: CSI Sanity Tests
     runs-on: golang
     steps:
-      - name: Install Node.js for actions
-        run: |
-          apt-get update -qq && apt-get install -y -qq curl nodejs npm
-          node --version
+      - name: Install build deps
+        run: apt-get update -qq && apt-get install -y -qq make
 
       - name: Checkout code
-        uses: actions/checkout@v4
+        run: |
+          git config --global credential.helper store
+          echo "https://token:${{ github.token }}@$(echo '${{ github.server_url }}' | sed 's|https\?://||')" > ~/.git-credentials
+          git clone --depth=1 --branch ${{ github.ref_name }} ${{ github.server_url }}/${{ github.repository }}.git .
 
       - name: Install dependencies
         run: go mod download
@@ -88,96 +80,53 @@ jobs:
         continue-on-error: true
         id: sanity
 
-      - name: Upload sanity test logs
-        uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: sanity-test-logs
-          path: sanity-output.log
-          retention-days: 7
-
       - name: Check sanity test result
         if: steps.sanity.outcome == 'failure'
         run: |
-          echo "❌ CSI sanity tests failed - see artifacts for details"
+          echo "CSI sanity tests failed - see logs above"
           exit 1
 
   e2e-tests:
     name: E2E Tests
     runs-on: golang
     steps:
-      - name: Install Node.js for actions
-        run: |
-          apt-get update -qq && apt-get install -y -qq curl nodejs npm
-          node --version
+      - name: Install build deps
+        run: apt-get update -qq && apt-get install -y -qq make
 
       - name: Checkout code
-        uses: actions/checkout@v4
+        run: |
+          git config --global credential.helper store
+          echo "https://token:${{ github.token }}@$(echo '${{ github.server_url }}' | sed 's|https\?://||')" > ~/.git-credentials
+          git clone --depth=1 --branch ${{ github.ref_name }} ${{ github.server_url }}/${{ github.repository }}.git .
 
       - name: Run E2E tests
         run: make e2e-test
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: e2e-test-results
-          path: |
-            /tmp/csi-e2e-*.sock
-          retention-days: 7
 
   mock-stress-tests:
     name: Mock RDS Stress Tests
     runs-on: golang
     steps:
-      - name: Install Node.js for actions
-        run: |
-          apt-get update -qq && apt-get install -y -qq curl nodejs npm
-          node --version
-
       - name: Checkout code
-        uses: actions/checkout@v4
+        run: |
+          git config --global credential.helper store
+          echo "https://token:${{ github.token }}@$(echo '${{ github.server_url }}' | sed 's|https\?://||')" > ~/.git-credentials
+          git clone --depth=1 --branch ${{ github.ref_name }} ${{ github.server_url }}/${{ github.repository }}.git .
 
       - name: Run mock stress tests
         run: |
           echo "Running concurrent stress tests..."
           go test -v -race -timeout 5m ./test/mock/... -run TestConcurrent
-          echo "✅ Mock stress tests passed"
-
-  build-test:
-    name: Test Container Build
-    runs-on: golang
-    steps:
-      - name: Install Node.js and Docker
-        run: |
-          apt-get update -qq
-          apt-get install -y -qq curl docker.io nodejs npm
-          node --version
-          docker --version
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build container (no push)
-        run: |
-          docker build \
-            --build-arg GIT_COMMIT=${{ github.event.pull_request.head.sha }} \
-            --build-arg GIT_TAG=pr-${{ github.event.pull_request.number }} \
-            --build-arg BUILD_DATE=${{ github.event.pull_request.updated_at }} \
-            -t test-image:pr-${{ github.event.pull_request.number }} \
-            .
-
-          echo "✅ Container build successful"
+          echo "Mock stress tests passed"
 
   test-summary:
     name: Test Summary
-    runs-on: ubuntu-latest
-    needs: [verify-and-test, sanity-tests, e2e-tests, mock-stress-tests, build-test]
+    runs-on: golang
+    needs: [verify-and-test, sanity-tests, e2e-tests, mock-stress-tests]
     if: always()
     steps:
       - name: Generate summary
         run: |
-          echo "## 🧪 Test Results Summary"
+          echo "Test Results Summary"
           echo ""
           echo "| Test Suite | Status |"
           echo "|------------|--------|"
@@ -185,17 +134,15 @@ jobs:
           echo "| CSI Sanity Tests | ${{ needs.sanity-tests.result }} |"
           echo "| E2E Tests | ${{ needs.e2e-tests.result }} |"
           echo "| Mock Stress Tests | ${{ needs.mock-stress-tests.result }} |"
-          echo "| Container Build | ${{ needs.build-test.result }} |"
           echo ""
 
           if [ "${{ needs.verify-and-test.result }}" = "success" ] && \
              [ "${{ needs.sanity-tests.result }}" = "success" ] && \
              [ "${{ needs.e2e-tests.result }}" = "success" ] && \
-             [ "${{ needs.mock-stress-tests.result }}" = "success" ] && \
-             [ "${{ needs.build-test.result }}" = "success" ]; then
-            echo "✅ **All tests passed! Ready for review.**"
+             [ "${{ needs.mock-stress-tests.result }}" = "success" ]; then
+            echo "All tests passed! Ready for review."
             exit 0
           else
-            echo "❌ **Some tests failed. Please review the logs.**"
+            echo "Some tests failed. Please review the logs."
             exit 1
           fi
